--- a/package.json
+++ b/package.json
@@ -8,19 +8,35 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome format --write .",
+    "check": "biome check .",
+    "dev": "ts-node-dev src/server/local-server.ts"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
+    "@types/node": "22.15.30",
+    "aws-cdk": "2.1018.0",
+    "esbuild": "^0.25.5",
+    "eslint-plugin-local-rules": "^3.0.2",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1010.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "~5.8.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.189.0",
-    "constructs": "^10.0.0"
+    "@aws-sdk/client-secrets-manager": "^3.826.0",
+    "@slack/bolt": "^4.4.0",
+    "@types/aws-lambda": "^8.10.149",
+    "aws-cdk-lib": "2.200.1",
+    "axios": "^1.9.0",
+    "constructs": "^10.4.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.19.2"
   }
 }
