refactor: consolidate environment variable examples - improved .env.example with better documentation and structure, removed duplicate env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
-# You Cursor Admin Api key
-CURSOR_API_KEY=key_...
-# Your Slack bot token
-SLACK_BOT_TOKEN=xoxb-...
-# Your Slack bot signing secret
-SLACK_SIGNING_SECRET=
+# Cursor Active Users Bot - Local Development Environment Variables
+
+# Cursor API credentials - get these from your Cursor admin settings
+CURSOR_API_KEY=your_cursor_api_key_here
+
+# Slack bot configuration - create a Slack app and get these tokens
+# Your Slack app needs these permissions: chat:write, users:read.email
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token-here
+SLACK_SIGNING_SECRET=your-slack-app-signing-secret-here
 # Recipient of the notification
 # Use channel_id or @user_id
-SLACK_USER_ID=
+SLACK_USER_ID=U1234567890
+
 # AWS account details
 AWS_ACCOUNT=
 AWS_REGION=
+
+# Port for the local Express server (optional, defaults to 3000)
+PORT=3000
+
