--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.10.0",
     "constructs": "^10.4.2",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.25.75"
   }
 }
