Refactor tests for CursorOperations and GitHubOperations to use Secrets and Env data; remove inactive-users-analyzer tests
- Updated CursorOperations tests to initialize with Secrets and Env data instead of API key.
- Added tests for findInactiveUsers and categorizeInactiveUsers methods in CursorOperations.
- Refactored GitHubOperations tests to use Secrets and Env data.
- Removed inactive-users-analyzer test file as its functionality is now integrated into CursorOperations.

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@
 # Service Configuration
 # Enable/disable specific services (default: Cursor=true, GitHub=false)
 ENABLE_CURSOR=true
-ENABLE_GITHUB_COPILOT=false
+ENABLE_GITHUB_COPILOT=true
+# Enable/disable Slack notifications (default: true)
+ENABLE_SLACK_NOTIFICATIONS=false
 
 # Cursor API credentials - get these from your Cursor admin settings
 # Required when ENABLE_CURSOR=true
